# Raylib-CPP-Template-For-VSCode

./: .gitignore  CMakeLists.txt
include/: .gitkeep
resources/: .gitkeep
src/: main.cpp
